--- a/settings/.config/neofetch/config.conf
+++ b/settings/.config/neofetch/config.conf
@@ -31,73 +31,9 @@ print_info() {
     info line_break
 }
 
-# Image backend.
-#
-# Default:  'ascii'
-# Values:   'ascii', 'caca', 'catimg', 'jp2a', 'iterm2', 'off', 'termpix', 'pixterm', 'tycat', 'w3m'
-# Flag:     --backend
 image_backend="w3m"
-
-# Image Source
-#
-# Which image or ascii file to display.
-#
-# Default:  'auto'
-# Values:   'auto', 'ascii', 'wallpaper', '/path/to/img', '/path/to/ascii', '/path/to/dir/'
-# Flag:     --source
-#
-# NOTE: 'auto' will pick the best image source for whatever image backend is used.
-#       In ascii mode, distro ascii art will be used and in an image mode, your
-#       wallpaper will be used.
 image_source="dotfiles/resources/neofetch-image.jpg"
-
-
-# Crop mode
-#
-# Default:  'normal'
-# Values:   'normal', 'fit', 'fill'
-# Flag:     --crop_mode
-#
-# See this wiki page to learn about the fit and fill options.
-# https://github.com/dylanaraps/neofetch/wiki/What-is-Waifu-Crop%3F
-crop_mode="normal"
-
-# Crop offset
-# Note: Only affects 'normal' crop mode.
-#
-# Default:  'center'
-# Values:   'northwest', 'north', 'northeast', 'west', 'center'
-#           'east', 'southwest', 'south', 'southeast'
-# Flag:     --crop_offset
-crop_offset="center"
-
-# Image size
-# The image is half the terminal width by default.
-#
-# Default: 'auto'
-# Values:  'auto', '00px', '00%', 'none'
-# Flags:   --image_size
-#          --size
-image_size="auto"
-
-# Image offsets
-# Only works with the w3m backend.
-#
-# Default: '0'
-# Values:  'px'
-# Flags:   --xoffset
-#          --yoffset
-yoffset=0
-xoffset=0
-
-# Image background color
-# Only works with the w3m backend.
-#
-# Default: ''
-# Values:  'color', 'blue'
-# Flag:    --bg_color
-background_color=
-
+crop_mode="fill"
 
 # Config version.
 #
