--- a/settings/.config/i3status/config
+++ b/settings/.config/i3status/config
@@ -31,10 +31,10 @@ battery all {
         format = "%status %percentage %remaining"
         format_down = "No battery"
         integer_battery_capacity = true
-        status_chr = "⚡ CHR"
-        status_bat = "🔋 BAT"
-        status_unk = "? UNK"
-        status_full = "☻ FULL"
+        status_chr = "CHR"
+        status_bat = "BAT"
+        status_unk = "UNK"
+        status_full = "FULL"
         low_threshold = 10
 }
 
