--- a/settings/.config/i3status/config
+++ b/settings/.config/i3status/config
@@ -14,30 +14,39 @@ general {
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
+order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W:%quality at %essid"
-        format_down = ""
+        format_up = "直%quality %essid"
+        format_down = "睊"
 }
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %speed"
+        format_up = " %speed"
         format_down = ""
 }
 
 battery all {
-        format = "%status %percentage %remaining"
+        format = "%status %percentage"
         format_down = "No battery"
         integer_battery_capacity = true
-        status_chr = "CHR"
-        status_bat = "BAT"
-        status_unk = "UNK"
-        status_full = "FULL"
+        status_chr = "⚡"
+        status_bat = ""
+        status_unk = "?"
+        status_full = ""
         low_threshold = 10
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = " %Y-%m-%d  %H:%M:%S"
+}
+
+volume master {
+        format = " %volume"
+        format_muted = " muted"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
