--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -145,6 +145,11 @@ bindsym $mod+shift+m exec --no-startup-id amixer -D pulse sset Master unmute
 bindsym $mod+equal exec --no-startup-id amixer -D pulse sset Master 5%-
 bindsym $mod+shift+equal exec --no-startup-id amixer -D pulse sset Master 5%+
 
+# startup commands
+exec --no-startup-id feh --bg-fill $HOME/dotfiles/resources/wallpaper.png
+# source .xinitrc for local settings
+exec --no-startuo-id source $HOME/.xinitrc
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
