--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -138,12 +138,11 @@ for_window [class="^.*"] border pixel 1
 focus_follows_mouse no
 
 # Audio settings
-# M / Shift M = Mute / Unmute
-bindsym $mod+m exec --no-startup-id amixer -D pulse sset Master mute
-bindsym $mod+shift+m exec --no-startup-id amixer -D pulse sset Master unmute
+# M toggles mute
+bindsym $mod+m exec --no-startup-id amixer -D pulse sset Master toggle && pkill -RTMIN+1
 # equal / plus = lower / raise volume
-bindsym $mod+equal exec --no-startup-id amixer -D pulse sset Master 5%-
-bindsym $mod+shift+equal exec --no-startup-id amixer -D pulse sset Master 5%+
+bindsym $mod+equal exec --no-startup-id amixer -D pulse sset Master 5%- && pkill -RTMIN+1
+bindsym $mod+shift+equal exec --no-startup-id amixer -D pulse sset Master 5%+ && pkill -RTMIN+1
 
 # startup commands
 exec --no-startup-id feh --bg-fill $HOME/dotfiles/resources/wallpaper.png
@@ -154,6 +153,5 @@ exec --no-startuo-id source $HOME/.xinitrc
 # finds out, if available)
 bar {
         font pango:Hack 12
-        separator_symbol " | "
-        status_command i3status
+        status_command i3blocks
 }
