--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -25,7 +25,7 @@ bindsym $mod+Return exec termite
 bindsym $mod+w kill
 
 # start dmenu (a program launcher)
-bindsym $mod+r exec dmenu_run
+bindsym $mod+r exec rofi -show combi
 
 # change focus
 bindsym $mod+h focus left
@@ -169,6 +169,7 @@ client.urgent           #caee11 #caee11 #000000 #caee11   #caee11
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        font pango:Hack 12
-        status_command i3blocks
+    tray_output primary
+    font pango:Hack 12
+    status_command i3blocks
 }
