Add newsboat config and urls for some rss feeds
Also include dunst for future notification messages

--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -153,6 +153,7 @@ bindsym $mod+n exec $HOME/dotfiles/scripts/notes.sh
 for_window [title="floating"] floating enable, resize set 800 500
 
 # startup commands
+exec --no-startup-id dunst
 exec --no-startup-id feh --bg-fill $HOME/dotfiles/resources/wallpaper.png
 
 # i3 gaps
