--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -149,6 +149,7 @@ bindsym $mod+shift+u exec --no-startup-id xrandr --output eDP-1 --brightness $(x
 bindsym $mod+ctrl+u exec --no-startup-id xrandr --output eDP-1 --brightness 0.5
 
 # shortcut to notes dmenu
+bindsym $mod+q exec $HOME/dotfiles/scripts/projects.sh
 bindsym $mod+n exec $HOME/dotfiles/scripts/notes.sh
 for_window [title="floating"] floating enable, resize set 800 500
 
