--- a/settings/.config/neofetch/config.conf
+++ b/settings/.config/neofetch/config.conf
@@ -32,7 +32,7 @@ print_info() {
 }
 
 image_backend="w3m"
-image_source="dotfiles/resources/neofetch-image.png"
+image_source="$HOME/dotfiles/resources/neofetch-image.png"
 crop_mode="fill"
 
 # Config version.
