auto install coc extensions

--- a/settings/.config/nvim/coc-settings.json
+++ b/settings/.config/nvim/coc-settings.json
@@ -5,6 +5,11 @@
       "rootPatterns": ["go.mod"],
       "trace.server": "verbose",
       "filetypes": ["go"]
+    },
+    "dockerfile": {
+      "command": "docker-langserver",
+      "filetypes": ["dockerfile"],
+      "args": ["--stdio"]
     }
   }
 }
