small changes to nvim packages

--- a/settings/.config/nvim/coc-settings.json
+++ b/settings/.config/nvim/coc-settings.json
@@ -1,4 +1,9 @@
 {
+  "coc.preferences.formatOnSaveFiletypes": [
+    "go",
+    "json",
+    "js"
+  ],
   "languageserver": {
     "go": {
       "command": "gopls",
