--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -19,7 +19,7 @@ font pango:Hack 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+w kill
