--- a/settings/.config/alacritty.yml
+++ b/settings/.config/alacritty.yml
@@ -5,6 +5,10 @@ font:
   # Point size
   size: 12.0
 
+  normal:
+    family: Comic Mono
+    style: Regular
+
 # TokyoNight Alacritty Colors
 colors:
   # Default colors
