--- a/settings/.config/alacritty.yml
+++ b/settings/.config/alacritty.yml
@@ -3,11 +3,9 @@
 # Font configuration
 font:
   # Point size
-  size: 12.0
-
-  normal:
-    family: Comic Mono
-    style: Regular
+  size: 13.0
+  offset:
+    y: -3
 
 # TokyoNight Alacritty Colors
 colors:
