--- a/settings/.config/fontconfig/fonts.conf
+++ b/settings/.config/fontconfig/fonts.conf
@@ -2,12 +2,12 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
     <alias>
-        <family>Hack</family>
-        <prefer><family>Hack Nerd Font Mono</family></prefer>
+        <family>ComicCode</family>
+        <prefer><family>ComicCode Nerd Font</family></prefer>
         <default><family>mono</family></default>
     </alias>
     <alias>
         <family>monospace</family>
-        <prefer><family>Hack Nerd Font Mono</family></prefer>
+        <prefer><family>ComicCode Nerd Font</family></prefer>
     </alias>
 </fontconfig>
