--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -101,6 +101,10 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+
+# keybinding to lock screen
+bindsym $mod+Control+l exec "i3lock -c 000000"
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
