--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -33,23 +33,17 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+# arrow keys move workspaces left or right
+bindsym $mod+Left move workspace to output left
+bindsym $mod+Down move workspace to output down
+bindsym $mod+Up move workspace to output up
+bindsym $mod+Right move workspace to output right
 
 # split in horizontal orientation
 bindsym $mod+b split h
@@ -100,7 +94,6 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
-
 
 # keybinding to lock screen
 bindsym $mod+Control+l exec "i3lock -c 000000"
@@ -177,6 +170,8 @@ client.urgent           #caee11 #caee11 #000000 #caee11   #caee11
 # finds out, if available)
 bar {
     tray_output primary
+    tray_padding 8
     font pango:ComicCode 12
     status_command i3blocks
+    position bottom
 }
