--- a/settings/.config/gh-dash/config.yml
+++ b/settings/.config/gh-dash/config.yml
@@ -32,7 +32,7 @@ defaults:
     width: 60 # width in columns
   refetchIntervalMinutes: 30 # will refetch all sections every 30 minutes
 repoPaths: # configure where to locate repos when checking out PRs
-  miniscruff/*: ~/projects/*
+  miniscruff/*: ~/projects/miniscruff/*
 keybindings:
   prs:
     - key: a
