--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -19,13 +19,13 @@ font pango:ComicCode 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec nixGL alacritty
 
 # kill focused window
 bindsym $mod+w kill
 
 # start dmenu (a program launcher)
-bindsym $mod+r exec rofi -show combi
+bindsym $mod+r exec rofi -show run
 
 # change focus
 bindsym $mod+h focus left
