refactor go generator to be more expansive
* remove nix
* use lua for neovim config
* fix git editor value for new neovim path
* projects.sh will now use one prompt for two paths
* expand upgrade.sh

--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -19,7 +19,7 @@ font pango:ComicCode 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec nixGL alacritty
+bindsym $mod+Return exec $HOME/.local/bin/alacritty
 
 # kill focused window
 bindsym $mod+w kill
