--- a/settings/.gitconfig
+++ b/settings/.gitconfig
@@ -1,6 +1,5 @@
 [core]
-	excludesfile = /home/ronnie/.gitignore
-	editor = /home/ronnie/apps/nvim-linux64/bin/nvim
+	editor = nvim
 [user]
 	email = miniscruff@hey.com
 	name = Ronnie Smith
