--- a/settings/.config/alacritty/alacritty.toml
+++ b/settings/.config/alacritty/alacritty.toml
@@ -1,4 +1,6 @@
-import = ["$HOME/projects/catppuccin/alacritty/catppuccin-mocha.toml"]
+import = [
+    "/home/ronnie/projects/catppuccin/alacritty/catppuccin-mocha.toml"
+]
 live_config_reload = true
 
 [cursor]
@@ -6,7 +8,7 @@ unfocused_hollow = true
 vi_mode_style = "Block"
 
 [font]
-size = 12.0
+size = 13.0
 
 [shell]
 program = "/usr/bin/zsh"
