add ghostty config, will remove alacritty later

--- a/settings/.config/i3/config
+++ b/settings/.config/i3/config
@@ -19,7 +19,8 @@ font pango:ComicCode 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec "$HOME/.local/bin/alacritty --command zsh"
+bindsym $mod+Return exec "ghostty"
+bindsym $mod+Shift+Return exec "$HOME/.local/bin/alacritty --command zsh"
 
 # kill focused window
 bindsym $mod+w kill
